--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -355,7 +355,7 @@ build-image-swagger-latest:
       - Dockerfile.*
       - go.*
   script:
-    - bash test/1.synthetic.sh
+#    - bash test/1.synthetic.sh
     - bash test/2.logical_generic.sh
     - bash test/4.physical_basebackup.sh
   after_script:
